feat: adjusting cors, adding password validations, and finishing saving customer.